fix contrast for date

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -139,10 +139,9 @@
         time {
             width: auto;
             padding: 20px;
-            background-color: $secondary;
+            background-color: $primary;
             color: $white;
             border-top-left-radius: 5px;
-            opacity: .8;
             position: absolute;
             left: 0;
             top: 0;
